# ai-cookbook

./: .gitignore  README.md
agent/: pyproject.toml
agent/app/: server.py
agent/app/agent/: graph.py
client/: package-lock.json  package.json
mcp/: README.md  package.json
mcp-servers/booking-mcp/src/: booking-mcp-server.ts
mcp/src/: booking-mcp-server.ts  sse-server.ts  stdio-server.ts
